--- a/echarts/ECharts02.html
+++ b/echarts/ECharts02.html
@@ -12,7 +12,9 @@
 		var option={
 			title:{
 				text:"ECharts02自定义统计图表",
-				paddng:20	
+				subtext:"2016下半年销量和产量分析",
+				itemGap:15,
+				left:"center"
 			},
 			tooltip:{
 				trigger:"axis",
@@ -21,7 +23,12 @@
 				}
 			},
 			legend:{
-				data:['销量','产量']
+				data:['销量','产量'],
+				left:"center",
+				top:60
+			},
+			grid:{
+				top:100
 			},
 			xAxis:{
 				type:'category',
@@ -47,11 +54,15 @@
 			series:[{
 				name:"销量",
 				type:"bar",
-				data:[5,20,26,10,10,20,23]
+				data:[5,20,26,10,10,20,23],
+				barGap:0,
+				barWidth:20,
+				barCategoryGap:5
 			},
 			{
 				name:"产量",
 				type:"bar",
+				barWidth:20,
 				data:[25,40,82,15,30,28,38]
 			}]
 		};
